--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         </div>
 
         <h1 id="title">hungryfaceai root site</h1>
-        <p class="tagline">This is the root of the hungryfaceai GitHub Pages site.</p>
+        <p class="tagline">This is the root of the hungryfaceai pages site.</p>
         <p class="note">
           To use Naptio, the privacy-first AI baby monitor, continue to the main app entry point.
         </p>
@@ -213,7 +213,6 @@
     <footer role="contentinfo">
       <span class="footer-left footer-note">
         © 2025 Naptio
-        <span class="dedication" aria-label="Dedicated to Émile">• For Émile</span>
       </span>
       <a class="footer-right footer-note" href="https://hungryfaceai.github.io/hungryface/legal">Legal</a>
     </footer>
