--- a/temp.html
+++ b/temp.html
@@ -114,7 +114,7 @@
       line-height: 1;
       cursor: pointer;
       text-decoration: none;
-      transition: background-color .15s ease, color .15s ease;
+      transition: background-color .15s ease, color .15s ease, transform .12s ease;
     }
 
     .btn-primary:hover,
@@ -122,6 +122,7 @@
       background: #eaeaea;
       color: #000;
       text-decoration: none;
+      transform: translateY(-0.5px);
     }
 
     /* ---------- Install section ---------- */
@@ -139,6 +140,12 @@
       margin: 0 0 10px;
     }
 
+    .install-sub {
+      margin: 0 0 14px;
+      font-size: 0.82rem;
+      opacity: 0.75;
+    }
+
     .store-grid {
       display: grid;
       grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -151,7 +158,7 @@
       gap: 10px;
       padding: 10px 12px;
       border-radius: 999px;
-      border: 1px solid rgba(255,255,255,0.18);
+      border: 1px solid rgba(255,255,255,0.16);
       background:
         radial-gradient(circle at 0 0, rgba(255,255,255,0.06), rgba(255,255,255,0.02) 35%, rgba(0,0,0,0.9) 100%);
       text-decoration: none;
@@ -160,6 +167,7 @@
       transition:
         border-color .15s ease,
         background-color .15s ease,
+        box-shadow .15s ease,
         transform .12s ease;
     }
 
@@ -171,17 +179,30 @@
       outline: none;
     }
 
+    .store-card.is-active {
+      border-color: rgba(255,255,255,0.9);
+      box-shadow:
+        0 0 0 1px rgba(255,255,255,0.4),
+        0 12px 30px rgba(0,0,0,0.8);
+      background:
+        radial-gradient(circle at 0 0, rgba(255,255,255,0.16), rgba(255,255,255,0.05) 35%, rgba(0,0,0,0.92) 100%);
+    }
+
     .store-icon {
-      width: 26px;
-      height: 26px;
+      width: 28px;
+      height: 28px;
       border-radius: 999px;
       border: 1px solid rgba(255,255,255,0.25);
       display: grid;
       place-items: center;
-      font-size: 0.8rem;
-      font-weight: 600;
-      opacity: 0.9;
       flex-shrink: 0;
+      background: radial-gradient(circle at 30% 0%, rgba(255,255,255,0.16), transparent 60%);
+    }
+
+    .store-icon-svg {
+      width: 18px;
+      height: 18px;
+      display: block;
     }
 
     .store-text {
@@ -189,16 +210,40 @@
       flex-direction: column;
       gap: 2px;
       text-align: left;
+      min-width: 0;
+    }
+
+    .store-label-row {
+      display: flex;
+      align-items: center;
+      gap: 6px;
     }
 
     .store-label {
       font-weight: 600;
       font-size: 0.92rem;
+      white-space: nowrap;
+    }
+
+    .store-badge {
+      display: none;
+      padding: 2px 6px;
+      border-radius: 999px;
+      border: 1px solid rgba(255,255,255,0.35);
+      font-size: 0.7rem;
+      text-transform: uppercase;
+      letter-spacing: 0.07em;
+      opacity: 0.85;
+    }
+
+    .store-card.is-active .store-badge {
+      display: inline-flex;
     }
 
     .store-caption {
       font-size: 0.78rem;
       opacity: 0.8;
+      line-height: 1.4;
     }
 
     footer {
@@ -293,28 +338,62 @@
 
         <!-- Install section: Android app + iOS PWA instructions -->
         <section class="install-section" aria-label="Install Naptio on your device">
-          <p class="install-heading">Install Naptio</p>
+          <p class="install-heading">Install Naptio on your device</p>
+          <p class="install-sub">
+            Choose your platform. If we recognise your device, we’ll highlight the best option.
+          </p>
           <div class="store-grid">
             <!-- Android -->
             <a class="store-card"
+               data-device="android"
                href="https://play.google.com/store/apps/details?id=io.github.hungryfaceai.twa"
                aria-label="Download the Naptio Android app from Google Play">
-              <span class="store-icon" aria-hidden="true">A</span>
+              <span class="store-icon" aria-hidden="true">
+                <!-- Simple Android-style logo -->
+                <svg class="store-icon-svg" viewBox="0 0 24 24">
+                  <path d="M7.5 6.5 6.2 4.4a.4.4 0 0 1 .7-.4l1.4 2.3a6 6 0 0 1 7.4 0l1.4-2.3a.4.4 0 0 1 .7.4L16.5 6.5"
+                        fill="none" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/>
+                  <rect x="6" y="7" width="12" height="9" rx="2" ry="2"
+                        fill="none" stroke="currentColor" stroke-width="1.4"/>
+                  <line x1="9" y1="5.3" x2="9" y2="5.3" stroke="currentColor" stroke-width="1.6" stroke-linecap="round"/>
+                  <line x1="15" y1="5.3" x2="15" y2="5.3" stroke="currentColor" stroke-width="1.6" stroke-linecap="round"/>
+                  <line x1="6" y1="10" x2="4.8" y2="10" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/>
+                  <line x1="18" y1="10" x2="19.2" y2="10" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/>
+                </svg>
+              </span>
               <span class="store-text">
-                <span class="store-label">Android app</span>
-                <span class="store-caption">Download Naptio from Google Play.</span>
+                <span class="store-label-row">
+                  <span class="store-label">Android app</span>
+                  <span class="store-badge">Recommended</span>
+                </span>
+                <span class="store-caption">Install Naptio from Google Play for a native-like experience.</span>
               </span>
             </a>
 
             <!-- iOS PWA -->
             <a class="store-card"
+               data-device="ios"
                href="https://hungryfaceai.github.io/hungryface/home/"
                aria-label="Open Naptio and add it to your iOS home screen">
-              <span class="store-icon" aria-hidden="true">iOS</span>
+              <span class="store-icon" aria-hidden="true">
+                <!-- Simple Apple-style logo -->
+                <svg class="store-icon-svg" viewBox="0 0 24 24">
+                  <path d="M16.6 4.1c-.7.1-1.5.5-2 1.1-.5.5-.9 1.4-.8 2.2"
+                        fill="none" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/>
+                  <path d="M12.3 7.2c.6 0 1.1.2 1.6.2.5 0 1.2-.2 2-.2 1.2.1 2.2.7 2.8 1.8-1.1.7-1.7 1.7-1.7 3
+                           0 1.8 1.2 3.3 2.9 3.3-.3.9-.7 1.6-1.2 2.2-.7.9-1.5 1.8-2.7 1.8-.6 0-1.1-.2-1.7-.4-.5-.2-1-.4-1.6-.4
+                           -.6 0-1.1.2-1.6.4-.6.2-1.1.4-1.8.4-1.2 0-2-1-2.7-1.9-.7-.9-1.3-2-1.6-3.1-.2-.8-.3-1.5-.3-2.3
+                           0-1.3.7-2.4 1.8-3.1.7-.4 1.7-.7 2.6-.6.5 0 1 .2 1.5.3.5.1.9.3 1.3.3z"
+                        fill="none" stroke="currentColor" stroke-width="1.4" stroke-linejoin="round"/>
+                </svg>
+              </span>
               <span class="store-text">
-                <span class="store-label">iPhone &amp; iPad</span>
+                <span class="store-label-row">
+                  <span class="store-label">iPhone &amp; iPad</span>
+                  <span class="store-badge">Recommended</span>
+                </span>
                 <span class="store-caption">
-                  Open in Safari, then tap Share → “Add to Home Screen”.
+                  Open in Safari, then tap <strong>Share</strong> → <strong>Add to Home Screen</strong>.
                 </span>
               </span>
             </a>
@@ -330,5 +409,45 @@
       <a class="footer-right footer-note" href="https://hungryfaceai.github.io/hungryface/legal">Legal</a>
     </footer>
   </div>
+
+  <script>
+    (function() {
+      try {
+        var ua = navigator.userAgent || navigator.vendor || "";
+        var isAndroid = /Android/i.test(ua);
+        var isIOS = /iPad|iPhone|iPod/.test(ua) ||
+                    (navigator.platform === "MacIntel" && navigator.maxTouchPoints > 1);
+
+        var androidCard = document.querySelector('[data-device="android"]');
+        var iosCard = document.querySelector('[data-device="ios"]');
+
+        var activeCard = null;
+
+        if (isAndroid && androidCard) {
+          activeCard = androidCard;
+        } else if (isIOS && iosCard) {
+          activeCard = iosCard;
+        }
+
+        if (activeCard) {
+          activeCard.classList.add("is-active");
+
+          // Move the recommended card to the first position for clarity
+          var grid = activeCard.parentElement;
+          if (grid && grid.firstElementChild !== activeCard) {
+            grid.insertBefore(activeCard, grid.firstElementChild);
+          }
+
+          // Make the ARIA label explicit about recommendation
+          var label = activeCard.getAttribute("aria-label") || "";
+          if (label && !/recommended/i.test(label)) {
+            activeCard.setAttribute("aria-label", label + " (recommended for your device)");
+          }
+        }
+      } catch (e) {
+        // Fail silently; cards still work as normal links.
+      }
+    })();
+  </script>
 </body>
 </html>
