--- a/temp.html
+++ b/temp.html
@@ -90,12 +90,6 @@
       font-weight: 800;
     }
 
-    .tagline {
-      margin: 0 0 20px;
-      font-size: clamp(1rem, 2.2vw, 1.2rem);
-      opacity: 0.9;
-    }
-
     .note {
       margin: 0 0 24px;
       font-size: 0.95rem;
@@ -138,12 +132,6 @@
       text-transform: uppercase;
       opacity: 0.7;
       margin: 0 0 10px;
-    }
-
-    .install-sub {
-      margin: 0 0 14px;
-      font-size: 0.82rem;
-      opacity: 0.75;
     }
 
     .store-grid {
@@ -327,9 +315,8 @@
         </div>
 
         <h1 id="title">hungryfaceai root site</h1>
-        <p class="tagline">This is the root of the hungryfaceai pages site.</p>
         <p class="note">
-          To use Naptio, the privacy-first AI baby monitor, continue to the main app entry point.
+          To use Naptio, the privacy-first AI baby monitor, continue to the main app entry point or install it below.
         </p>
 
         <a class="btn-primary" href="https://hungryfaceai.github.io/hungryface/home/">
@@ -339,9 +326,6 @@
         <!-- Install section: Android app + iOS PWA instructions -->
         <section class="install-section" aria-label="Install Naptio on your device">
           <p class="install-heading">Install Naptio on your device</p>
-          <p class="install-sub">
-            Choose your platform. If we recognise your device, we’ll highlight the best option.
-          </p>
           <div class="store-grid">
             <!-- Android -->
             <a class="store-card"
@@ -393,7 +377,9 @@
                   <span class="store-badge">Recommended</span>
                 </span>
                 <span class="store-caption">
-                  Open in Safari, then tap <strong>Share</strong> → <strong>Add to Home Screen</strong>.
+                  Open this link in <strong>Safari</strong>, tap the
+                  <strong>Share</strong> icon (square with an arrow ↑ at the bottom of the screen),
+                  then choose <strong>Add to Home Screen</strong>.
                 </span>
               </span>
             </a>
