--- a/temp.html
+++ b/temp.html
@@ -314,7 +314,7 @@
           </svg>
         </div>
 
-        <h1 id="title">hungryfaceai root site</h1>
+        <h1 id="title">hungryfaceai</h1>
         <p class="note">
           To use Naptio, the privacy-first AI baby monitor, continue to the main app entry point or install it below.
         </p>
