--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                   <span class="store-label">Android app</span>
                   <span class="store-badge">Recommended</span>
                 </span>
-                <span class="store-caption">Install Naptio from Google Play for a native-like experience.</span>
+                <span class="store-caption">Install Naptio from Google Play.</span>
               </span>
             </a>
 
