--- a/temp.html
+++ b/temp.html
@@ -192,7 +192,7 @@
         <h1 id="title">hungryfaceai root site</h1>
 
         <p class="note">
-          To use Naptio, the privacy-first AI baby monitor, continue to the main app entry point.
+          To use Naptio, the privacy-first AI baby monitor, continue to the main app entry point or install it below.
         </p>
 
         <a class="btn-primary" href="https://hungryfaceai.github.io/hungryface/home/">
