--- a/temp.html
+++ b/temp.html
@@ -203,7 +203,7 @@
         <div class="store-badges" aria-label="Download Naptio">
           <!-- Apple App Store badge: use only when the app is actually on the App Store -->
           <a class="store-badge"
-             href="#"
+             href="/hungryface/assets/badges/apple-pwa.html"
              aria-label="Download on the App Store">
             <!-- TODO: update src to your real App Store badge path, and href to your App Store URL -->
             <img src="/hungryface/assets/badges/app-store-badge.svg"
@@ -214,7 +214,6 @@
           <a class="store-badge"
              href="https://play.google.com/store/apps/details?id=io.github.hungryfaceai.twa"
              aria-label="Get it on Google Play">
-            <!-- TODO: update src if you use a different path or PNG -->
             <img src="/hungryface/assets/badges/google-play-badge.svg"
                  alt="Get it on Google Play">
           </a>
