--- a/index.html
+++ b/index.html
@@ -34,9 +34,6 @@
       display: flex;
       align-items: center;
       padding: 14px 20px;
-    }
-    /* Safe-area insets on sides */
-    header {
       padding-left: max(20px, env(safe-area-inset-left));
       padding-right: max(20px, env(safe-area-inset-right));
     }
@@ -108,7 +105,7 @@
       line-height: 1;
       cursor: pointer;
       text-decoration: none;
-      transition: background-color .15s ease, color .15s ease, transform .12s ease;
+      transition: background-color .15s ease, color .15s ease;
     }
 
     .btn-primary:hover,
@@ -116,122 +113,19 @@
       background: #eaeaea;
       color: #000;
       text-decoration: none;
-      transform: translateY(-0.5px);
     }
 
-    /* ---------- Install section ---------- */
-    .install-section {
-      margin-top: 28px;
-      text-align: left;
-    }
-
-    .install-heading {
-      font-size: 0.95rem;
-      font-weight: 600;
-      letter-spacing: 0.08em;
-      text-transform: uppercase;
-      opacity: 0.7;
-      margin: 0 0 10px;
-    }
-
-    .store-grid {
-      display: grid;
-      grid-template-columns: repeat(2, minmax(0, 1fr));
-      gap: 10px;
-    }
-
-    .store-card {
+    /* Store badges row */
+    .store-badges {
+      margin-top: 24px;
       display: flex;
-      align-items: center;
-      gap: 10px;
-      padding: 10px 12px;
-      border-radius: 999px;
-      border: 1px solid rgba(255,255,255,0.16);
-      background:
-        radial-gradient(circle at 0 0, rgba(255,255,255,0.06), rgba(255,255,255,0.02) 35%, rgba(0,0,0,0.9) 100%);
-      text-decoration: none;
-      color: #fff;
-      font-size: 0.9rem;
-      transition:
-        border-color .15s ease,
-        background-color .15s ease,
-        box-shadow .15s ease,
-        transform .12s ease;
+      justify-content: center;
+      gap: 12px;
+      flex-wrap: wrap;
     }
-
-    .store-card:hover,
-    .store-card:focus-visible {
-      border-color: rgba(255,255,255,0.6);
-      transform: translateY(-1px);
-      text-decoration: none;
-      outline: none;
-    }
-
-    .store-card.is-active {
-      border-color: rgba(255,255,255,0.9);
-      box-shadow:
-        0 0 0 1px rgba(255,255,255,0.4),
-        0 12px 30px rgba(0,0,0,0.8);
-      background:
-        radial-gradient(circle at 0 0, rgba(255,255,255,0.16), rgba(255,255,255,0.05) 35%, rgba(0,0,0,0.92) 100%);
-    }
-
-    .store-icon {
-      width: 28px;
-      height: 28px;
-      border-radius: 999px;
-      border: 1px solid rgba(255,255,255,0.25);
-      display: grid;
-      place-items: center;
-      flex-shrink: 0;
-      background: radial-gradient(circle at 30% 0%, rgba(255,255,255,0.16), transparent 60%);
-    }
-
-    .store-icon-svg {
-      width: 18px;
-      height: 18px;
+    .store-badge img {
       display: block;
-    }
-
-    .store-text {
-      display: flex;
-      flex-direction: column;
-      gap: 2px;
-      text-align: left;
-      min-width: 0;
-    }
-
-    .store-label-row {
-      display: flex;
-      align-items: center;
-      gap: 6px;
-    }
-
-    .store-label {
-      font-weight: 600;
-      font-size: 0.92rem;
-      white-space: nowrap;
-    }
-
-    .store-badge {
-      display: none;
-      padding: 2px 6px;
-      border-radius: 999px;
-      border: 1px solid rgba(255,255,255,0.35);
-      font-size: 0.7rem;
-      text-transform: uppercase;
-      letter-spacing: 0.07em;
-      opacity: 0.85;
-    }
-
-    .store-card.is-active .store-badge {
-      display: inline-flex;
-    }
-
-    .store-caption {
-      font-size: 0.78rem;
-      opacity: 0.8;
-      line-height: 1.4;
+      height: 44px;       /* Adjust if needed, but keep aspect ratio */
     }
 
     footer {
@@ -241,8 +135,6 @@
       padding: 16px 20px;
       font-size: 0.9rem;
       opacity: 0.85;
-    }
-    footer {
       padding-left: max(16px, env(safe-area-inset-left));
       padding-right: max(16px, env(safe-area-inset-right));
       padding-bottom: max(16px, env(safe-area-inset-bottom));
@@ -260,28 +152,11 @@
       opacity: 0.85;
     }
 
-    .dedication{
-      opacity:.65;
-      font-size:.85em;
-      margin-left:.5rem;
-      letter-spacing:.2px;
-      user-select:none;
-    }
-    @media (hover:hover){
-      .dedication:hover{ opacity:.9; }
-    }
-
     @media (max-width: 520px) {
       footer {
         flex-direction: column;
         align-items: flex-start;
         gap: 4px;
-      }
-    }
-
-    @media (max-width: 480px) {
-      .store-grid {
-        grid-template-columns: 1fr;
       }
     }
 
@@ -314,7 +189,8 @@
           </svg>
         </div>
 
-        <h1 id="title">hungryfaceai</h1>
+        <h1 id="title">hungryfaceai root site</h1>
+
         <p class="note">
           To use Naptio, the privacy-first AI baby monitor, continue to the main app entry point or install it below.
         </p>
@@ -323,117 +199,31 @@
           Go to Naptio
         </a>
 
-        <!-- Install section: Android app + iOS PWA instructions -->
-        <section class="install-section" aria-label="Install Naptio on your device">
-          <p class="install-heading">Install Naptio on your device</p>
-          <div class="store-grid">
-            <!-- Android -->
-            <a class="store-card"
-               data-device="android"
-               href="https://play.google.com/store/apps/details?id=io.github.hungryfaceai.twa"
-               aria-label="Download the Naptio Android app from Google Play">
-              <span class="store-icon" aria-hidden="true">
-                <!-- Simple Android-style logo -->
-                <svg class="store-icon-svg" viewBox="0 0 24 24">
-                  <path d="M7.5 6.5 6.2 4.4a.4.4 0 0 1 .7-.4l1.4 2.3a6 6 0 0 1 7.4 0l1.4-2.3a.4.4 0 0 1 .7.4L16.5 6.5"
-                        fill="none" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/>
-                  <rect x="6" y="7" width="12" height="9" rx="2" ry="2"
-                        fill="none" stroke="currentColor" stroke-width="1.4"/>
-                  <line x1="9" y1="5.3" x2="9" y2="5.3" stroke="currentColor" stroke-width="1.6" stroke-linecap="round"/>
-                  <line x1="15" y1="5.3" x2="15" y2="5.3" stroke="currentColor" stroke-width="1.6" stroke-linecap="round"/>
-                  <line x1="6" y1="10" x2="4.8" y2="10" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/>
-                  <line x1="18" y1="10" x2="19.2" y2="10" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/>
-                </svg>
-              </span>
-              <span class="store-text">
-                <span class="store-label-row">
-                  <span class="store-label">Android app</span>
-                  <span class="store-badge">Recommended</span>
-                </span>
-                <span class="store-caption">Install Naptio from Google Play.</span>
-              </span>
-            </a>
+        <!-- Official store badges -->
+        <div class="store-badges" aria-label="Download Naptio">
+          <!-- Apple App Store badge: use only when the app is actually on the App Store -->
+          <a class="store-badge"
+             href="/hungryface/assets/badges/apple-pwa.html"
+             aria-label="Download on the App Store">
+            <!-- TODO: update src to your real App Store badge path, and href to your App Store URL -->
+            <img src="/hungryface/assets/badges/app-store-badge.svg"
+                 alt="Download on the App Store">
+          </a>
 
-            <!-- iOS PWA -->
-            <a class="store-card"
-               data-device="ios"
-               href="https://hungryfaceai.github.io/hungryface/home/"
-               aria-label="Open Naptio and add it to your iOS home screen">
-              <span class="store-icon" aria-hidden="true">
-                <!-- Simple Apple-style logo -->
-                <svg class="store-icon-svg" viewBox="0 0 24 24">
-                  <path d="M16.6 4.1c-.7.1-1.5.5-2 1.1-.5.5-.9 1.4-.8 2.2"
-                        fill="none" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/>
-                  <path d="M12.3 7.2c.6 0 1.1.2 1.6.2.5 0 1.2-.2 2-.2 1.2.1 2.2.7 2.8 1.8-1.1.7-1.7 1.7-1.7 3
-                           0 1.8 1.2 3.3 2.9 3.3-.3.9-.7 1.6-1.2 2.2-.7.9-1.5 1.8-2.7 1.8-.6 0-1.1-.2-1.7-.4-.5-.2-1-.4-1.6-.4
-                           -.6 0-1.1.2-1.6.4-.6.2-1.1.4-1.8.4-1.2 0-2-1-2.7-1.9-.7-.9-1.3-2-1.6-3.1-.2-.8-.3-1.5-.3-2.3
-                           0-1.3.7-2.4 1.8-3.1.7-.4 1.7-.7 2.6-.6.5 0 1 .2 1.5.3.5.1.9.3 1.3.3z"
-                        fill="none" stroke="currentColor" stroke-width="1.4" stroke-linejoin="round"/>
-                </svg>
-              </span>
-              <span class="store-text">
-                <span class="store-label-row">
-                  <span class="store-label">iPhone &amp; iPad</span>
-                  <span class="store-badge">Recommended</span>
-                </span>
-                <span class="store-caption">
-                  Open this link in <strong>Safari</strong>, tap the
-                  <strong>Share</strong> icon (square with an arrow ↑ at the bottom of the screen),
-                  then choose <strong>Add to Home Screen</strong>.
-                </span>
-              </span>
-            </a>
-          </div>
-        </section>
+          <!-- Google Play badge -->
+          <a class="store-badge"
+             href="https://play.google.com/store/apps/details?id=io.github.hungryfaceai.twa"
+             aria-label="Get it on Google Play">
+            <img src="/hungryface/assets/badges/google-play-badge.svg"
+                 alt="Get it on Google Play">
+          </a>
+        </div>
       </section>
     </main>
 
     <footer role="contentinfo">
-      <span class="footer-left footer-note">
-        © 2025 Naptio
-      </span>
-      <a class="footer-right footer-note" href="https://hungryfaceai.github.io/hungryface/legal">Legal</a>
+      <span class="footer-left footer-note">© 2025 Naptio</span>
     </footer>
   </div>
-
-  <script>
-    (function() {
-      try {
-        var ua = navigator.userAgent || navigator.vendor || "";
-        var isAndroid = /Android/i.test(ua);
-        var isIOS = /iPad|iPhone|iPod/.test(ua) ||
-                    (navigator.platform === "MacIntel" && navigator.maxTouchPoints > 1);
-
-        var androidCard = document.querySelector('[data-device="android"]');
-        var iosCard = document.querySelector('[data-device="ios"]');
-
-        var activeCard = null;
-
-        if (isAndroid && androidCard) {
-          activeCard = androidCard;
-        } else if (isIOS && iosCard) {
-          activeCard = iosCard;
-        }
-
-        if (activeCard) {
-          activeCard.classList.add("is-active");
-
-          // Move the recommended card to the first position for clarity
-          var grid = activeCard.parentElement;
-          if (grid && grid.firstElementChild !== activeCard) {
-            grid.insertBefore(activeCard, grid.firstElementChild);
-          }
-
-          // Make the ARIA label explicit about recommendation
-          var label = activeCard.getAttribute("aria-label") || "";
-          if (label && !/recommended/i.test(label)) {
-            activeCard.setAttribute("aria-label", label + " (recommended for your device)");
-          }
-        }
-      } catch (e) {
-        // Fail silently; cards still work as normal links.
-      }
-    })();
-  </script>
 </body>
 </html>
